dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta - will be overwritten
dnl If you don't want it to overwrite it,
dnl 	Please disable it in the Anjuta project configuration

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(lingot, 0.8.2b1)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

AC_PROG_INTLTOOL([0.23])

GETTEXT_PACKAGE=lingot
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [lingot])

dnl Languages which your application supports
ALL_LINGUAS="ca cs de es gl it pt_BR sv zh_CN"
AM_GLIB_GNU_GETTEXT

AM_PROG_LIBTOOL

AC_CHECK_LIB(m, sin)

PKG_CHECK_MODULES([GTK], [gtk+-2.0])
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)

usealsa=yes

AC_ARG_ENABLE(
  alsa,
  AC_HELP_STRING([--enable-alsa], [use ALSA @<:@default=yes@:>@]),
  [
    if test "x$enableval" = "xno"; then
      usealsa=no
    fi
  ])

if test "x$usealsa" = "xyes"; then
	PKG_CHECK_MODULES([ALSA], [alsa])
	AC_SUBST(ALSA_CFLAGS)
	AC_SUBST(ALSA_LIBS)
	CFLAGS="$CFLAGS -DALSA"
fi

usejack=yes

AC_ARG_ENABLE(
  jack,
  AC_HELP_STRING([--enable-jack], [use JACK @<:@default=yes@:>@]),
  [
    if test "x$enableval" = "xno"; then
      usejack=no
    fi
  ])

AM_CONDITIONAL(HAVE_JACK, test "x$usejack" = "xyes")

if test "x$usejack" = "xyes"; then
	PKG_CHECK_MODULES(JACK, jack >= 0.102.0)
	AC_SUBST(JACK_CFLAGS)
	AC_SUBST(JACK_LIBS)
	CFLAGS="$CFLAGS -DJACK"
fi


PKG_CHECK_MODULES([GLADE], [libglade-2.0])
AC_SUBST(GLADE_CFLAGS)
AC_SUBST(GLADE_LIBS)

dnl Set PACKAGE_LOCALE_DIR in config.h.
if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${ac_default_prefix}/${DATADIRNAME}/locale", [Package local directory])
else
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${prefix}/${DATADIRNAME}/locale", [Package local directory])
fi

dnl Set PACKAGE SOURCE DIR in config.h.
packagesrcdir=`cd $srcdir && pwd`

dnl Set PACKAGE PREFIX
if test "x${prefix}" = "xNONE"; then
  packageprefix=${ac_default_prefix}
else
  packageprefix=${prefix}
fi

dnl Set PACKAGE DATA & DOC DIR
packagedatadir=share
packagedocdir=doc/${PACKAGE}

dnl Set PACKAGE DIRs in config.h.
packagepixmapsdir=share/pixmaps/${PACKAGE}
packagehelpdir=share/gnome/help/${PACKAGE}
packagemenudir=share/applications

dnl Subst PACKAGE_DATA_DIR.
NO_PREFIX_PACKAGE_DATA_DIR="${packagedatadir}"
AC_SUBST(NO_PREFIX_PACKAGE_DATA_DIR)
PACKAGE_DATA_DIR="${packageprefix}/${packagedatadir}"
AC_SUBST(PACKAGE_DATA_DIR)

dnl Subst PACKAGE_DOC_DIR.
NO_PREFIX_PACKAGE_DOC_DIR="${packagedocdir}"
AC_SUBST(NO_PREFIX_PACKAGE_DOC_DIR)
PACKAGE_DOC_DIR="${packageprefix}/${packagedocdir}"
AC_SUBST(PACKAGE_DOC_DIR)

dnl Subst PACKAGE_PIXMAPS_DIR.
NO_PREFIX_PACKAGE_PIXMAPS_DIR="${packagepixmapsdir}"
AC_SUBST(NO_PREFIX_PACKAGE_PIXMAPS_DIR)
PACKAGE_PIXMAPS_DIR="${packageprefix}/${packagepixmapsdir}"
AC_SUBST(PACKAGE_PIXMAPS_DIR)

dnl Subst PACKAGE_HELP_DIR.
NO_PREFIX_PACKAGE_HELP_DIR="${packagehelpdir}"
AC_SUBST(NO_PREFIX_PACKAGE_HELP_DIR)
PACKAGE_HELP_DIR="${packageprefix}/${packagehelpdir}"
AC_SUBST(PACKAGE_HELP_DIR)

dnl Subst PACKAGE_MENU_DIR.
NO_PREFIX_PACKAGE_MENU_DIR="${packagemenudir}"
AC_SUBST(NO_PREFIX_PACKAGE_MENU_DIR)
PACKAGE_MENU_DIR="${packageprefix}/${packagemenudir}"
AC_SUBST(PACKAGE_MENU_DIR)

dnl AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR, "${packageprefix}/${packagedatadir}")
dnl AC_DEFINE_UNQUOTED(PACKAGE_DOC_DIR, "${packageprefix}/${packagedocdir}")
dnl AC_DEFINE_UNQUOTED(PACKAGE_PIXMAPS_DIR, "${packageprefix}/${packagepixmapsdir}")
dnl AC_DEFINE_UNQUOTED(PACKAGE_HELP_DIR, "${packageprefix}/${packagehelpdir}")
dnl AC_DEFINE_UNQUOTED(PACKAGE_MENU_DIR, "${packageprefix}/${packagemenudir}")
dnl AC_DEFINE_UNQUOTED(PACKAGE_SOURCE_DIR, "${packagesrcdir}")


AC_DEFINE([PACKAGE_DATA_DIR], [share], [Package data dir])
AC_DEFINE([PACKAGE_DOC_DIR], [doc], [Package doc dir])
AC_DEFINE([PACKAGE_HELP_DIR], [doc], [Help])
AC_DEFINE([PACKAGE_MENU_DIR], [], [Menu])
AC_DEFINE([PACKAGE_PIXMAPS_DIR], [pixmaps], [Pixmaps])
AC_DEFINE([PACKAGE_SRC_DIR], [src], [Source])


AC_OUTPUT([
Makefile
po/Makefile.in
src/Makefile
src/glade/Makefile
pixmaps/Makefile
lingot.desktop
])

