## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

lingot_iconsdir = $(datadir)/icons/hicolor/scalable/apps

lingot_icons_DATA = \
	org.nongnu.lingot.svg

EXTRA_DIST = $(lingot_icons_DATA)
