## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

lingot_pixmapsdir = $(prefix)/@NO_PREFIX_PACKAGE_PIXMAPS_DIR@

lingot_pixmaps_DATA = \
	lingot-icon.svg

EXTRA_DIST = $(lingot_pixmaps_DATA)
